# personal-hooks

./: .pre-commit-hooks.yaml  README.md  setup.cfg
print_arguments.egg-info/: SOURCES.txt
python38_kernel_fixer/: main.py
python38_kernel_fixer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
