# setup.cfg
[metadata]
name = python38-kernel-fixer
description = Ensure kernel python38
version = 0.1.0
author = Toan Le Bao
author_email = none
license = none
url = none

[options]
packages = find:

[options.entry_points]
console_scripts =
    python38-kernel-fixer = python38_kernel_fixer.main:main
